zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__hover_over_active_pane_unsets_hover.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
expression: "format!(\"{:?}\", hover_panes)"
---
{}
