zellij-server/src/tab/unit/snapshots/zellij_server__tab__tab_integration_tests__hover_over_inactive_pane_sets_hover_state.snap
---
source: zellij-server/src/tab/./unit/tab_integration_tests.rs
expression: "format!(\"{:?}\", hover_panes)"
---
{1: Terminal(1)}
